fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -155,10 +155,10 @@ margin: 0;
     background: rgba(255, 255, 255, 0.8);
     border-bottom-left-radius:2%;
     border-bottom-right-radius:2%;
-    width: 80vh;
+    width: 80vw;
     width: calc(var(--vw, 1vw) * 80);
-    height: 40vh;
-    height: calc(var(--vw, 1vw) * 40);
+    height: 40vw;
+    height: calc(var(--vw, 1vw) * 32);
     overflow: hidden;
     text-align:center;
     margin: 2vw auto;
